MIT-728: fix menu overlapping logos on smaller screen sizes
This requires a custom media query

--- a/components/headerTemplate/headerTemplate.css
+++ b/components/headerTemplate/headerTemplate.css
@@ -142,7 +142,7 @@
   flex-flow: row nowrap;
   position: static;
 
-  @media ($smMin) {
+  @media only screen and (min-width: 790px) {
     display: flex;
   }
 }
